Fix for wrong color on Family Nav (sidebar) flyouts

--- a/themes/webtrees/style.css
+++ b/themes/webtrees/style.css
@@ -181,7 +181,6 @@ table.center {
 }
 
 .facts_label {
-	color:#fff;
 	background-color:#81a9cb;
 	font-size:12px;
 	padding:4px 4px 4px 4px;
